<resources>
    <string name="app_name">RoomData1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age</string>
    <string name="btn_add">Add</string>
    <string name="tmp_id">1</string>
    <string name="tmp_first_name">Vinh</string>
    <string name="tmp_last_name">Le Van</string>
    <string name="tmp_age">22</string>
    <string name="search">Search</string>
</resources>