<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:id="@+id/row_layout">

    <TextView
        android:id="@+id/row_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tmp_id"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/row_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/row_id"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tmp_first_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/row_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/row_first_name"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tmp_last_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/row_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/row_last_name"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/tmp_age"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>